# gewe-cc

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml  release.toml
.github/workflows/: release-plz.yml  release.yml
plugin/: README.md
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/hooks/: hooks.json
plugin/skills/remote-control/: SKILL.md
src/: config.rs  hook.rs  init.rs  main.rs  notify.rs  remote.rs  sanitize.rs  server.rs  transcript.rs
