[package]
name = "gewe-cc"
version = "0.1.3"
edition = "2024"
authors = ["wangnov"]
description = "Claude Code 远程协作模式命令行工具"
repository = "https://github.com/wangnov/gewe-cc"
license = "MIT"
keywords = ["claude-code", "remote", "wechat", "collaboration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "cargo"] }
colored = "3.0.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
pulldown-cmark = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace]
members = ["."]
